Add images of Amazon and change style of logo amazon

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,12 @@
     <link rel="StyleSheet" href="stlyle.css">
 </head>
 <body>
+    <div class="Container Welcom">
+        <div>
     <h1> Hello Bahaa</h1>
+</div>
+<div><img src="images/amazon-logo-white.png"/></div>
+</div>
     <script src="javaScr.Js"></script>
 </body>
 </html>
